# RestApi_Flask_Mysql_Grafana_Docker

./: README.md  docker-compose.yml  dockerfile  pyproject.toml
flask_rest_api/app/clients/: ClientLogger.py  ClientSessionMysql.py
flask_rest_api/app/src/: app.py  setting_config.py  validations.py
flask_rest_api/utils/Queries/: DDL-create_tables.sql  ETL-hired_by_qs.sql  ETL-hired_over_the_mean.sql
flask_rest_api/utils/backups/employes/: employes_bkup.avro
